# rain-llvm

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.gitlab/ci/: sccache.sh  tarpaulin.sh
src/: codegen.rs  error.rs  lib.rs  repr.rs
src/codegen/: arena.rs  bits.rs  finite.rs  function.rs  gamma.rs  logical.rs  mod.rs  repr.rs  shim.rs  ternary.rs  treesym.rs  tuple.rs
tests/: basic_functions_compile.rs
