[package]
name = "rain-llvm"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

[dependencies]
rain-ir = { git = "https://gitlab.com/rain-lang/rain-ir.git" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
fxhash = "^0.2"
either = "^1.5"